# impact-check

./: .gitignore  ARCHITECTURE.md  QA.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: security.md
impact_check/: analyzer.py  cli.py  config.py  context_finder.py  debug.py  git_collector.py  guard.py  html_reporter.py  reporter.py
impact_check/providers/: base.py  claude.py  factory.py  gemini.py  openai_compat.py
