[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impact-check"
version = "0.1.0"
description = "AI-powered change impact analyzer for git repositories"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
claude  = ["anthropic>=0.40.0"]
gpt     = ["openai>=1.0"]
grok    = ["openai>=1.0"]
ollama  = ["openai>=1.0"]
gemini  = ["google-genai>=1.0"]
all     = ["anthropic>=0.40.0", "openai>=1.0", "google-genai>=1.0"]

[project.scripts]
impact-check = "impact_check.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["impact_check*"]
